    * add Nintendo Wii/GameCube video driver (-vo wii)
    * VIDIX driver for SuperH Mobile VEU hardware block.
    * support -border on vo_gl/gl2 in x11
    * Direct3D Windows video output driver added.
    * factorize code in vo_wii
    * removed unnecessary code from vo x11, xv, xvmc
    * automatic detection of hw acceleration (vo gl:yuv=x) for vo_gl

    MEncoder:
    * check for system-wide configuration file in MEncoder
    * AVOption support for lavc encoders
    * AVOption support for lavf muxers

    Others:
    * many compiler warning fixes
    * basic support for Closed Captioning roll-up mode
    * reworked screensaver disabling support, most users will need to use
      -heartbeat-cmd due to screensaver authors failing to design a common API
    * grayscale decoding/encoding with FFmpeg disabled where it slowed down
      the color case
    * Linux AppleIR remote support
    * add options to disable some or all configuration files
    * support for DOS-style file:///x:/path paths
    * some new slave commands (check DOCS/tech/slave.txt)
    * misc fixes to libass
    * libdvdcss updated to 1.2.10, now same as upstream version
    * fix -endchapter support again for -dump* options
    * add startup volume option

    Ports:
    * small crash with vo_macosx fixed
    * AC3/DTS passthrough for ao_macosx
    * fix frozen OSD on Mac OS X
    * vo_gl now works with -wid and nVidia drivers on Windows (this is a hack)
    * VIDIX on SuperH.
    * workarounds for AltiVec on Apple gcc 3.3 on Mac OS X dropped
    * vo_macosx can now be compiled in 64-bits mode
    * OpenGL support for unmodified MinGW64

    SWScaler:
    * new LGPLed YUV to RGB tables generator


  rc2try2:

    Security:
    * buffer overflow in url.c fixed
    * buffer overflow in stream_cddb.c fixed
    * stack overflow in demuxer_audio.c fixed
    * buffer overflow in demuxer_mov.c fixed



  rc2: "AreWeThereYet?" October 7, 2007
  (SVN revisions: MPlayer r24722, FFmpeg r10677)

    DOCS: